Refactored EdgeDetecting, from struct to object model

--- a/edgeDetection/CMakeLists.txt
+++ b/edgeDetection/CMakeLists.txt
@@ -9,10 +9,42 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(test_cv main.cpp IPM.cpp IPM.h ImageBasicOperations.cpp ImageBasicOperations.h FeatureDetection.cpp FeatureDetection.h KMeansImplementation.cpp KMeansImplementation.h EdgeDetecting.cpp EdgeDetecting.h backgroundSubtract.cpp backgroundSubtract.h ImageDB.cpp ImageDB.h models/PieceContour.cpp models/PieceContour.h models/PieceModel.cpp models/PieceModel.h models/PieceType.h chess/ChessMoves.cpp chess/ChessMoves.h models/ChessSquare.cpp models/ChessSquare.h)
+set(SOURCE_FILES
+        main.cpp
+        IPM.cpp
+        IPM.h
+        ImageBasicOperations.cpp
+        ImageBasicOperations.h
+        FeatureDetection.cpp
+        FeatureDetection.h
+        KMeansImplementation.cpp
+        KMeansImplementation.h
+        EdgeDetecting.cpp
+        EdgeDetecting.h
+        backgroundSubtract.cpp
+        backgroundSubtract.h
+        ImageDB.cpp
+        ImageDB.h
+        models/PieceContour.cpp
+        models/PieceContour.h
+        models/PieceModel.cpp
+        models/PieceModel.h
+        models/PieceType.h
+        models/ChessSquare.cpp
+        models/ChessSquare.h models/ChessSquareMatrix.cpp models/ChessSquareMatrix.h)
+
+add_executable(test_cv ${SOURCE_FILES})
 
 #add libs you need
-set(OpenCV_LIBS opencv_core opencv_imgproc opencv_highgui opencv_imgcodecs opencv_features2d opencv_videoio opencv_video opencv_shape)
+set(OpenCV_LIBS
+        opencv_core
+        opencv_imgproc
+        opencv_highgui
+        opencv_imgcodecs
+        opencv_features2d
+        opencv_videoio
+        opencv_video
+        opencv_shape)
 
 #linking
 target_link_libraries(test_cv ${OpenCV_LIBS})
