Moved the edge detection to a different file in order to clean up some code

--- a/edgeDetection/CMakeLists.txt
+++ b/edgeDetection/CMakeLists.txt
@@ -33,7 +33,7 @@ set(SOURCE_FILES
         models/ChessSquareMatrix.cpp
         models/ChessSquareMatrix.h
         src/VideoProcessing.h
-        src/VideoProcessing.cpp)
+        src/VideoProcessing.cpp src/EdgeProcessing.cpp src/EdgeProcessing.h)
 
 add_executable(test_cv ${SOURCE_FILES})
 
