Created a new class for contour database

--- a/edgeDetection/CMakeLists.txt
+++ b/edgeDetection/CMakeLists.txt
@@ -33,7 +33,7 @@ set(SOURCE_FILES
         src/VideoProcessing.h
         src/VideoProcessing.cpp
         src/EdgeProcessing.h
-        src/EdgeProcessing.cpp models/ChessTableEdges.cpp models/ChessTableEdges.h src/MotionProcessing.cpp src/MotionProcessing.h src/MogLearningSpeed.h src/MogLearningSpeed.cpp)
+        src/EdgeProcessing.cpp models/ChessTableEdges.cpp models/ChessTableEdges.h src/MotionProcessing.cpp src/MotionProcessing.h src/MogLearningSpeed.h src/MogLearningSpeed.cpp src/ContourDatabase.cpp src/ContourDatabase.h)
 
 add_executable(test_cv ${SOURCE_FILES})
 
